# tonatiuhXX_angular_distribution_analysis

./: .gitignore  CMakeLists.txt  README.md
cpp/: CMakeLists.txt  compute_directions.cpp
data/: photons_parameters.txt
include/: exampleprocessors.h  gcf.h  parallelprocessor.h  raypathdirectionsprocessor.h  raypathlocalcoordinateprocessor.h  raypathprocessor.h  raypathserver.h  vec3d.h
modules/: compute_directions.pyd
scripts/: comparison.py  plot_polar_diagram.py  transformation.py  visualize_points_in_3D.py  visualize_unit_vectors_in_3D.py  visualize_unit_vectors_in_unit_sphere.py
src/: comparison.py  data_processing.py  gcf.cpp  main.cpp  main.py  raypathdirectionsprocessor.cpp  raypathlocalcoordinateprocessor.cpp  raypathserver.cpp  transformation.py  vec2d.cpp  vec3d.cpp  visualization.py
